# pr-formatter

./: README.md  pom.xml  setup.cfg  test_sample.py
pr_formatter/: __init__.py
src/main/java/pr_formatter/: FileNewLines.java  FormatFileChanges.java  MarkNewLines.java  Range.java  RunCommand.java
src/pr_formatter/: command.py  functions.py
src/pr_formatter/test/: test_sample.py
src/test/java/pr_formatter/: DirtyTests.java  FormatCommit.java  FormatFileChangesTest.java  MarkNewLinesTest.java
src/test/resources/: example.diff  example.java  expected.java
src/test/resources/simple_example/: expected.java  modified.java  original.java
