[metadata]
name = pr-formatter
version = 0.0.1
author = Matthias Arzt
author_email = arzt@mpi-cbg.de
license = BSD-3-Clause
description = Reformatting of git pull requests written in Java
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/maarzt/pr-formatter.git
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Project Site = https://github.com/maarzt/pr-formatter
    Report Issues = https://github.com/maarzt/pr-formatter/issues
    Documentation = https://github.com/maarzt/pr-formatter
    User Support = https://github.com/maarzt/pr-formatter/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src
# add your package requirements here
install_requires =
    cdifflib
    git_filter_repo


include_package_data = True

[options.packages.find]
where = src

[options.package_data]

[options.entry_points]
console_scripts =
    pr-formatter = pr_formatter.command:main
